<resources>
    <string name="app_name">Grocery Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="edit_text_hint">Username</string>
    <string name="edit_text_hint_email">Email</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="edit_text_hint_name">Username</string>
    <string name="edit_text_hint_mobile">Mobile</string>
    <string name="logout">SIGN OUT</string>
    <string name="proceed_to_checkout">CHECKOUT</string>
    <string name="total_price">Order total</string>
    <string name="sub_total_price">Subtotal</string>
    <string name="shipping_fee">Shipping</string>
    <string name="create_account">Create your account</string>
    <string name="titleShoppingCart">Shopping Cart</string>
    <string name="text_button_add_new_address">Add New Address</string>
    <string name="edit_text_hint_street_address">Street address</string>
    <string name="edit_text_hint_house_no">Apt/Suite</string>
    <string name="edit_text_hint_city">City</string>
    <string name="edit_text_hint_zip_code">Zip</string>
    <string name="edit_text_hint_billing_name">Bill to</string>
    <string name="discount">Discount</string>
    <string name="radio_home">Home</string>
    <string name="radio_office">Office</string>
    <string name="radio_other">Other</string>
    <string name="edit_text_hint_address_type">Address Type</string>
    <string name="edit_text_hint_patient_name">Name</string>
    <string name="text_view_delivery_address">Delivery Address</string>
    <string name="button_pay_online">Pay Online</string>
    <string name="button_pay_cash">Pay by Cash</string>
    <string name="order_success">Order Successful</string>
    <string name="thank_you">Thank you!</string>
    <string name="text_button_edit_address">Save</string>
</resources>